# email-triage-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml
env/env/: __init__.py  data.py  environment.py  graders.py  models.py
server/: app.py
