[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world email triage OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
entry_point = "app:app"
